Day18-Ingress_Jobs/flight-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flight
  template:
    metadata:
      labels:
        app: flight
    spec:
      containers:
        - name: cont-1
          image: naveenkumar30/paytm:flight
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: flight
spec:
  type: ClusterIP
  selector:
    app: flight
  ports:
    - port: 80
      targetPort: 80
