Day18-Ingress_Jobs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /bus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bus
                port:
                  number: 80
          - path: /flight(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: flight
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: bus
                port:
                  number: 80
